--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-*.pyc
-
+*.egg-info
+*.pot
+*.py[co]
+__pycache__
+MANIFEST
+dist/
+docs/_build/
+docs/locale/
+tests/coverage_html/
+tests/.coverage
+build/
